// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render Header component with groups and log in when user is logged out 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/groups"
        >
          Groups
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/login"
        >
          Log in
        </a>
      </div>
    </div>
  </nav>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root menuButton"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
  <div
    class="menuButtonTouchTarget"
    role="button"
    tabindex="-1"
  />
</div>
`;

exports[`Header should render Header component with groups, profile, and log out when user is logged in 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/groups"
        >
          Groups
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/mockUserName"
        >
          mockUserName
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <div
          role="button"
          tabindex="0"
        >
          <a
            class="navbarItemText"
          >
            Log out
          </a>
        </div>
      </div>
    </div>
  </nav>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root menuButton"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
  <div
    class="menuButtonTouchTarget"
    role="button"
    tabindex="-1"
  />
</div>
`;

exports[`Header should render Header component with groups, roles, users, and invites if user has permission 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users"
        >
          Users
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/groups"
        >
          Groups
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/roles"
        >
          Roles
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/invites"
        >
          Invites
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/login"
        >
          Log in
        </a>
      </div>
    </div>
  </nav>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root menuButton"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
  <div
    class="menuButtonTouchTarget"
    role="button"
    tabindex="-1"
  />
</div>
`;

exports[`Header should render Header component with groups, sign up, and log in when user is logged out and has been invited 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/groups"
        >
          Groups
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/login"
        >
          Log in
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/signup"
        >
          Sign up
        </a>
      </div>
    </div>
  </nav>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root menuButton"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
  <div
    class="menuButtonTouchTarget"
    role="button"
    tabindex="-1"
  />
</div>
`;
